# edge-runtime

./: .gitignore  AUDIT.md  CLOUDFLARE_WORKERS_COMPAT.md  Cargo.toml  Makefile  README.md  ROADMAP-NODE-COMPAT.md  ROADMAP.md  WEB_STANDARDS_REPORT.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  telemetry.rs
crates/cli/src/commands/: bundle.rs  check.rs  embedded_assert.rs  mod.rs  start.rs  test.rs  watch.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: bootstrap.js  cpu_timer.rs  extensions.rs  global_scope_shim.js  isolate.rs  isolate_logs.rs  lib.rs  manifest.rs  mem_check.rs  module_loader.rs  permissions.rs  ssrf.rs
crates/runtime-core/src/assert/: assert.ts  mod.ts  user_mod.ts
crates/runtime-core/src/assert/mock/: fetch.ts  mockFn.ts  mod.ts  spy.ts  time.ts
crates/runtime-core/src/internal/crypto/: constants.ts
crates/runtime-core/src/node_compat/: assert.ts  async_hooks.ts  buffer.ts  child_process.ts  cluster.ts  console.ts  crypto.ts  dgram.ts  diagnostics_channel.ts  dns.ts  events.ts  fs.ts  fs_promises.ts  http.ts  http2.ts  https.ts  inspector.ts  module.ts  net.ts  os.ts  path.ts  perf_hooks.ts  process.ts  punycode.ts  querystring.ts  readline.ts  repl.ts  request.ts  sqlite.ts  stream.ts  string_decoder.ts  test.ts  timers.ts  timers_promises.ts  tls.ts  url.ts  util.ts  v8.ts  vm.ts  zlib.ts
crates/runtime-core/src/runtime_shims/: 00_serve.js  98_global_scope_shared.js
crates/runtime-core/tests/: module_loader.rs
docs/: bundle-signing.md  cli.md  debugging-vscode.md  function-manifest.md  load_testing.md  metrics-endpoint-reference.md  observability-stack.md  testing-api-reference.md  testing-library.md  timeout-and-resource-tracking.md  web_standards_api_report.md
observability/: docker-compose.yml
schemas/: function-manifest.v1.schema.json  function-manifest.v2.schema.json
scripts/: README.md  bundle-eszip.sh  bundle-snapshot.sh  bundle.sh  deploy-and-test-snapshot.sh  quick-benchmark.sh  run-benchmarks.sh  start-observability-runtime.sh  zlib-guardrail-benchmark.sh
(+91 files in other folders)
