[package]
name = "edge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "deno-edge-runtime"
path = "src/main.rs"

[dependencies]
runtime-core.workspace = true
edge-server.workspace = true
functions.workspace = true

clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
deno_core.workspace = true
deno_ast.workspace = true
deno_graph.workspace = true
deno_error.workspace = true
eszip.workspace = true
url.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
anyhow.workspace = true
serde_json.workspace = true
bincode.workspace = true
notify.workspace = true
regex.workspace = true
walkdir.workspace = true
bytes.workspace = true
glob.workspace = true
rustls.workspace = true
tungstenite = "0.24"

[features]
hot-reload = ["functions/hot-reload"]
